--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.android.support:support-v4:28.0.0'
     implementation 'com.google.android.gms:play-services-maps:15.0.1'
-    implementation 'com.github.kittinunf.fuel:fuel-android:1.15.0'
-    implementation 'com.github.kittinunf.fuel:fuel-gson:1.15.0'
+    implementation 'com.google.android.gms:play-services-location:15.0.1'
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
 }
